replace all usages of "List.of" with more readable "ImmutableList.of/copyOf" to directly show the immutability.
 This might optimise internal operations, e.g.,
 avoid copies from List to other Lists, if all are ImmutableLists.